Fix wrapping in richtext help

--- a/app/assets/stylesheets/common.css.scss
+++ b/app/assets/stylesheets/common.css.scss
@@ -1837,12 +1837,12 @@ a.button {
     }
 
     li h4 {
-      width: 35%;
+      width: 40%;
       margin: 0;
     }
 
     li span, li p {
-      width: 60%;
+      width: 50%;
       margin-left: $lineheight/2;
       margin-bottom: $lineheight/4;
       white-space: nowrap;
